--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,16 +24,26 @@ trigger: none
 stages:
 - stage: Build
   jobs:
+  timeoutInMinutes: 180   # 3 hours
   - job: 'Linux'
+      strategy:
+      maxParallel: 3
+      matrix:
+        batch1:
+          GOAL: targets-group-1
+        batch2:
+          GOAL: targets-group-2
+        batch3:
+          GOAL: targets-group-rest
     pool:
       vmImage: 'ubuntu-16.04'
     steps:
     - script: make arm_sdk_install
       displayName: 'Install the build toolchain'
-    - script: make all -j2
+    - script: make ${GOAL} -j2 || exit $?
       displayName: 'Build the Targets'
     - script: mkdir release; cp obj/*.hex release/
-      displayName: 'Copy artefacts'
+      displayName: 'Copy artifacts'
     - task: PublishPipelineArtifact@1
       displayName: 'Publish Linux release'
       inputs:
@@ -43,7 +53,6 @@ stages:
 - stage: Release
   jobs:
   - job: Release
-    timeoutInMinutes: 360
 
     steps:
     - task: DownloadPipelineArtifact@2
