--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,10 +32,14 @@ stages:
       matrix:
         batch1:
           GOAL: targets-group-1
+          artifactName: emu1
         batch2:
           GOAL: targets-group-2
+          artifactName: emu2
         batch3:
           GOAL: targets-group-rest
+          artifactName: emu3
+
     pool:
       vmImage: 'ubuntu-18.04'
     steps:
@@ -44,11 +48,13 @@ stages:
     - script: make $(GOAL) -j2
       displayName: 'Build the Targets'
     - script: mkdir release; cp obj/*.hex release/
-      displayName: 'Copy artefacts'
+      displayName: 'Copy artifacts'
+    - script: rm -rf obj/*
+      displayName: 'Clean artifacts for parallel jobs'
     - task: PublishPipelineArtifact@1
       displayName: 'Publish Linux release'
       inputs:
-        artifactName: emuflight
+        artifactName: $(artifactName)
         targetPath: '$(System.DefaultWorkingDirectory)/release/'
 
 - stage: Release
@@ -104,7 +110,7 @@ stages:
         githubReleasePrerelease: true         #make it a pre-release, we can manually unset also if appropriate
         githubIgnoreAssets: false
         githubReleaseAsset: |
-          $(Pipeline.Workspace)/emuflight/**
+          $(Pipeline.Workspace)/emu**/**
         githubReuseRelease: true
         githubReuseDraftOnly: false
         githubSkipDuplicatedAssets: false
