try 002 curl function for timeout + ubuntu-latest

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,8 +52,10 @@ stages:
           artifactName: emu3
 
     pool:
-      vmImage: 'ubuntu-18.04'
+      vmImage: 'ubuntu-latest'
     steps:
+    - script: function curl () { command curl --connect-timeout 30 --retry 5 "$@" }
+      displayName: 'improve curl parameters'
     - script: make arm_sdk_install
       displayName: 'Install the build toolchain'
     - script: make $(GOAL) -j2
