--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,7 +54,7 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
-    - script: function curl () { command curl --connect-timeout 30 --retry 5 "$@" }
+    - script: function curl () { command curl --connect-timeout 30 --retry 5 "$@" ; } ;
       displayName: 'improve curl parameters'
     - script: make arm_sdk_install
       displayName: 'Install the build toolchain'
