--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -151,7 +151,7 @@ stages:
         repositoryName: 'nerdCopter/testBuilds'
         action: 'create'
         target: '$(Build.SourceVersion)'
-        #tagSource: 'gitTag'
+        tagSource: 'gitTag'
         title: '$(Build.Repository.Name): $(Build.SourceBranchName) $(today)'
         isDraft: true
         isPreRelease: true
