--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,23 +1,22 @@
 # Builds the emuflight firmware
 #
-# After building, artifacts are released to a seperate repository.
+# After building, artifacts are released to a separate repository.
 #
 # Azure Pipelines requires the following extensions to be installed:
 # - GitHub Tool: https://marketplace.visualstudio.com/items?itemName=marcelo-formentao.github-tools
 #
-# You'll also need to setup the follwing pipeline variables:
+# You'll also need to setup the following pipeline variables: (which can be in YML or in Azure-UI)
 #     "releaseNotes" - This is used to add the release notes in the windows job in the build stage so they can be published as part of the github release in the release stage
-#     "endpoint" - The name of the github endpoint link setup in AzDo - setup when linking AzDo and GitHub 'nerdCopter'
-#     "owner" - The owner of the repository to release to e.g. nerdCopter
-#     "repoName" - The name of the repository to release to e.g. EmuFlight_nerdCopter
-
+#     "endpoint" - The name of the github endpoint link setup in AzDo - can be USERNAME or name of GitHub-PAT added into Azure-UI
+#     "owner" - The owner of the repository to release to e.g. USERNAME
+#     "repoName" - The name of the repository to release to e.g. myREPO
+#         modded for two repoNames: destinationRepoName & destinationRepoNameTwo
 
 variables:
   endpoint: nerdCopter
   owner: nerdCopter
   destinationRepoName: EmuFlight_nerdRepo                     #release destination
   destinationRepoNameTwo: EmuFlight_EmuClassic_nerdCopter     #release destination
-
   releaseNotes: |+
      * not intended for public consumption.
      * may contain bugs / incomplete features.
@@ -65,8 +64,8 @@ stages:
     steps:
     - checkout: self
       clean: true
-      fetchDepth: 50
-      persistCredentials: true
+      fetchDepth: 50                  #lets shallow, but not too shallow for failure retries
+      persistCredentials: true        #probably do not need this
     - script: function curl () { command curl --connect-timeout 30 --retry 5 "$@" ; } ;
       displayName: 'improve curl parameters'
     - script: make arm_sdk_install
@@ -90,8 +89,8 @@ stages:
     steps:
     - checkout: self
       clean: true
-      fetchDepth: 50
-      persistCredentials: true
+      fetchDepth: 50                  #lets shallow, but not too shallow for failure retries
+      persistCredentials: true        #probably do not need this
     - task: DownloadPipelineArtifact@2
       inputs:
         buildType: 'current'
